# calc-yearly-acc

./: .editorconfig  .gitignore  Dockerfile  docker-compose.example.yml  pyproject.toml  start.sh
.github/workflows/: ci-cd.yml
calc_yearly_acc/: calc_yearly_acc.py
typings/osgeo/: __init__.pyi  _gdal.cpython-39-darwin.pyi  _gdalconst.cpython-39-darwin.pyi  _gnm.cpython-39-darwin.pyi  _ogr.cpython-39-darwin.pyi  _osr.cpython-39-darwin.pyi  gdal.pyi  gdal_array.pyi  gdalconst.pyi  gdalnumeric.pyi  gnm.pyi  ogr.pyi  osr.pyi
