[tool.poetry]
name = "calc_yearly_acc"
version = "1.0.0"
description = "Calcul de l'accumulation annuelle de pluie"
authors = ["Frédéric AMEYE <frederic.ameye@infoclimat.fr>", "Jean LECORDIER <jean.lecordier@infoclimat.fr>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
GDAL = "3.11.0"
numpy = "2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
